--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
 <body>
     <div class="header">
         <a href="index.html" class="logo">
-            <img src="kind.png" alt="Kinderland Logo">
+            <img src="kinder.png" alt="Kinderland Logo">
         </a>
         <div class="header-right">
             <a href="index.html">Home</a>
@@ -131,7 +131,7 @@
 
         <div class="team-members">
             <div class="team-member" onclick="toggleDetails('randel-details')">
-                <img src="randel.jpg" alt="Team Member 1">
+                <img src="cortez.png" alt="Team Member 1">
                 <h4>Jon Randel Cortez</h4>
                 <div class="details" id="randel-details">
                     <p>Contact Number: 975-223-0622</p>
@@ -140,7 +140,7 @@
                 </div>
             </div>
             <div class="team-member" onclick="toggleDetails('abby-details')">
-                <img src="abby.jpg" alt="Team Member 2">
+                <img src="abigail.png" alt="Team Member 2">
                 <h4>Abigail Gazzingan</h4>
                 <div class="details" id="abby-details">
                     <p>Contact Number: 969-174-7548</p>
@@ -149,7 +149,7 @@
                 </div>
             </div>
             <div class="team-member" onclick="toggleDetails('exequiel-details')">
-                <img src="exequiel.jpg" alt="Team Member 3">
+                <img src="mamerto.png" alt="Team Member 3">
                 <h4>Exequiel Mamerto</h4>
                 <div class="details" id="exequiel-details">
                     <p>Contact Number: 916-202-8652</p>
@@ -158,7 +158,7 @@
                 </div>
             </div>
             <div class="team-member" onclick="toggleDetails('cathrina-details')">
-                <img src="masmila.jpg" alt="Team Member 4">
+                <img src="cath.png" alt="Team Member 4">
                 <h4>Cathrina Masmila</h4>
                 <div class="details" id="cathrina-details">
                     <p>Contact Number: 963-059-8686</p>
