--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             }
 
                 .header a.logo img {
-                    width: 150px; 
+                    width: 150px; /* Adjusted width for kinder.png to match kind.png */
                     height: auto;
                 }
 
