--- a/about.html
+++ b/about.html
@@ -12,21 +12,21 @@
 
         body {
             margin: 0;
-            font-family: 'Poppins', sans-serif; 
+            font-family: 'Poppins', sans-serif;
             background-color: lightblue;
             display: flex;
             flex-direction: column;
-            min-height: 100vh; 
+            min-height: 100vh;
         }
 
         .header {
-            display: flex; 
-            align-items: center; 
-            justify-content: space-between; 
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
             padding: 10px;
-            background-color: rgba(255, 255, 255, 0.8); 
-            position: relative; 
-            z-index: 1; 
+            background-color: rgba(255, 255, 255, 0.8);
+            position: relative;
+            z-index: 1;
         }
 
             .header a {
@@ -38,8 +38,8 @@
             }
 
                 .header a.logo img {
-                    width: 250px; 
-                    height: auto; 
+                    width: 150px; 
+                    height: auto;
                 }
 
                 .header a:hover {
@@ -53,43 +53,43 @@
                 }
 
         main {
-            text-align: left; 
-            flex-grow: 1; 
-            padding: 0 20px; 
-            margin: 10px 0; 
+            text-align: left;
+            flex-grow: 1;
+            padding: 0 20px;
+            margin: 10px 0;
         }
 
         h1, h3, p, ul {
-            margin-left: 20px; 
-            margin-right: 20px; 
+            margin-left: 20px;
+            margin-right: 20px;
         }
 
         h1 {
-            font-size: 32px; 
+            font-size: 32px;
             color: darkblue;
-            margin-bottom: 5px; 
+            margin-bottom: 5px;
         }
 
         h3 {
-            font-size: 24px; 
-            color: darkblue; 
-            margin-top: 10px; 
-            margin-bottom: 10px; 
+            font-size: 24px;
+            color: darkblue;
+            margin-top: 10px;
+            margin-bottom: 10px;
         }
 
         footer {
             padding: 10px;
-            text-align: center; 
+            text-align: center;
             color: black;
         }
 
         p, ul {
-            font-size: 18px; 
-            line-height: 1.6; 
+            font-size: 18px;
+            line-height: 1.6;
         }
 
         ul {
-            margin-left: 0; 
+            margin-left: 0;
         }
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"> <!-- Google Fonts -->
@@ -97,7 +97,7 @@
 <body>
     <div class="header">
         <a href="index.html" class="logo">
-            <img src="kind.png" alt="Kinderland Logo"> <!-- Logo image -->
+            <img src="kinder.png" alt="Kinderland Logo"> <!-- Logo with updated size -->
         </a>
         <div class="header-right">
             <a href="index.html">Home</a>
@@ -119,11 +119,11 @@
 
         <h3>Features</h3>
         <ul>
-            <li><strong>Interactive Quizzes:</strong>Engaging quizzes covering alphabets, numbers, shapes, and colors that adapt to the child's learning level.</li>
+            <li><strong>Interactive Quizzes:</strong> Engaging quizzes covering alphabets, numbers, shapes, and colors that adapt to the child's learning level.</li>
             <li><strong>User-Friendly Interface:</strong> Designed with kids in mind, our app features colorful graphics and easy navigation.</li>
-            <li><strong>3D Learning Experiences:</strong> Immersive 3D environments that allow children to explore interactively, making learning visually appealing and engaging. </li>
-            <li><strong>Offline Mode: </strong> Ability to take quizzes and activities for offline use, ensuring children can learn anytime, anywhere.</li>
-</ul>
+            <li><strong>3D Learning Experiences:</strong> Immersive 3D environments that allow children to explore interactively, making learning visually appealing and engaging.</li>
+            <li><strong>Offline Mode:</strong> Ability to take quizzes and activities for offline use, ensuring children can learn anytime, anywhere.</li>
+        </ul>
     </main>
 
     <footer>
