--- a/flashcards.html
+++ b/flashcards.html
@@ -37,7 +37,7 @@
             }
 
                 .header a.logo img {
-                    width: 250px;
+                    width: 150px;
                     height: auto;
                 }
 
@@ -122,7 +122,7 @@
 <body>
     <div class="header">
         <a href="index.html" class="logo">
-            <img src="kind.png" alt="Kinderland Logo">
+            <img src="kinder.png" alt="Kinderland Logo">
         </a>
         <div class="header-right">
             <a href="index.html">Home</a>
