--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="J0QzpZZAEexOap6XEVDwn4tFK-IVKxAXrLGR3rSgWi8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="J0QzpZZAEexOap6XEVDwn4tFK-IVKxAXrLGR3rSgWi8" />
     <title>Kinderland - Home</title>
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -16,7 +16,7 @@
             font-family: Arial, Helvetica, sans-serif;
             height: 100vh;
             display: flex;
-            flex-direction: column; 
+            flex-direction: column;
         }
 
         .background {
@@ -25,7 +25,7 @@
             left: 0;
             width: 100%;
             height: 110%;
-            background-image: url('happy.png'); 
+            background-image: url('happy.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -38,13 +38,13 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5); 
-            z-index: 1; 
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1;
         }
 
         .header, main, footer {
             position: relative;
-            z-index: 2; 
+            z-index: 2;
         }
 
         .header {
@@ -65,7 +65,7 @@
             }
 
                 .header a.logo img {
-                    width: 250px;
+                    width: 150px;
                     height: auto;
                 }
 
@@ -83,41 +83,41 @@
             text-align: center;
             margin-top: 50px;
             color: black;
-            flex: 1; 
+            flex: 1;
         }
 
         h1 {
-            font-size: 48px; 
+            font-size: 48px;
             color: white;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 1); 
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
         }
 
         .tagline {
             font-family: 'Arial Black', sans-serif;
-            font-size: 60px; 
+            font-size: 60px;
             color: #ffeb3b;
-            text-shadow: 3px 3px 6px rgba(0, 0, 0, 1); 
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 1);
             margin: 20px 0;
-            text-align: left; 
-            width: 80%; 
+            text-align: left;
+            width: 80%;
             margin-left: auto;
-            margin-right: auto; 
-            letter-spacing: 2px; 
+            margin-right: auto;
+            letter-spacing: 2px;
         }
 
         .description {
-            text-align: left; 
-            font-size: 24px; 
+            text-align: left;
+            font-size: 24px;
             color: white;
             text-shadow: 1px 1px 3px rgba(0, 0, 0, 1);
-            line-height: 1.5; 
-            margin: 10px auto; 
-            width: 80%; 
+            line-height: 1.5;
+            margin: 10px auto;
+            width: 80%;
         }
 
         .highlight {
-            color: #ffeb3b; 
-            font-weight: bold; 
+            color: #ffeb3b;
+            font-weight: bold;
         }
 
         footer {
@@ -135,7 +135,7 @@
 
     <div class="header">
         <a href="index.html" class="logo">
-            <img src="kind.png" alt="Kinderland Logo">
+            <img src="kinder.png" alt="Kinderland Logo">
         </a>
         <div class="header-right">
             <a class="active" href="index.html">Home</a>
